[package]
name = "ss14"
version = "0.1.0"
authors = ["Hugo Laloge <hugo.laloge@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.15.0"
amethyst-imgui = { git = "https://github.com/Hugal31/amethyst-imgui", branch = "amethyst-v0.15" }
amethyst-byond = { path = "amethyst-byond" }
byond-lua = { path = "byond-lua" }
dmm = { git = "https://github.com/Hugal31/DMM.git" }
dmm-format = { git = "https://github.com/Hugal31/DMM.git" }
float-ord = "0.2"
fnv = "1"
log = "0.4"
los2d = { git = "https://github.com/Hugal31/los2d.git"}
rlua = "0.16"
serde = { version ="1", features = ["derive"] }
thread_profiler = { version = "0.3", optional = true }

[features]
default = ["no-slow-safety-check", "vulkan"]
vulkan = ["amethyst/vulkan"]
no-slow-safety-check = ["amethyst/no-slow-safety-checks"]
profiler = ["thread_profiler", "thread_profiler/thread_profiler", "amethyst/profiler", "amethyst-byond/profiler"]

[profile.dev]
opt-level = 2
lto = false
overflow-checks = false
