[package]
name = "amethyst-byond"
description = "Byond elements for Amethyst game engine"
version = "0.1.0"
authors = ["Hugo Laloge <hugo.laloge@gmail.com>"]
edition = "2018"

[dependencies]
amethyst_assets = { version = "0.7", features = ["nightly"] }
amethyst_animation = { version = "0.6", features = ["nightly"] }
amethyst_core = { version = "0.6", features = ["nightly"] }
amethyst_error = "0.1"
amethyst_rendy = { version = "0.1", features = ["nightly"] }
byond = { path = "../byond", features = ["serde", "specs"] }
dreammaker = { git = "https://github.com/SpaceManiac/SpacemanDMM.git", tag = "suite-1.0" }
inflate = "0.4"
png = "0.14"
fnv = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
rayon = "1"
