[package]
name = "amethyst-byond"
description = "Byond elements for Amethyst game engine"
version = "0.1.0"
authors = ["Hugo Laloge <hugo.laloge@gmail.com>"]
edition = "2018"

[dependencies]
amethyst_assets = { version = "0.7", features = ["nightly"] }
amethyst_animation = { version = "0.6", features = ["nightly"] }
amethyst_core = { version = "0.6", features = ["nightly"] }
amethyst_error = "0.1"
amethyst_rendy = { version = "0.1", features = ["nightly"] }
byond = { path = "../byond", features = ["serde", "specs"] }
byond-lua = { path = "../byond-lua" }
derivative = "1"
inflate = "0.4"
png = "0.14"
fnv = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
rayon = "1"
rlua = "0.16"
thread_profiler = { version = "0.3", optional = true }

[dev-dependencies]
derivative = "1"

[features]
default = []
profiler = ["thread_profiler", "thread_profiler/thread_profiler"]
