[package]
name = "amethyst-byond"
description = "Byond elements for Amethyst game engine"
version = "0.1.0"
authors = ["Hugo Laloge <hugo.laloge@gmail.com>"]
edition = "2018"

[dependencies]
amethyst_assets = "0.10.0"
amethyst_animation = "0.9.0"
amethyst_audio = "0.9.0"
amethyst_core = "0.9.0"
amethyst_derive = "0.7"
amethyst_error = "0.4.0"
amethyst_rendy = "0.4.0"
byond = { path = "../byond", features = ["serde", "specs"] }
byond-lua = { path = "../byond-lua" }
derivative = "1"
inflate = "0.4"
png = "0.14"
fnv = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
rayon = "1"
rlua = "0.16"
thread_profiler = { version = "0.3", optional = true }

[dev-dependencies]
derivative = "1"

[features]
default = []
profiler = ["thread_profiler", "thread_profiler/thread_profiler"]
nightly = [
        "amethyst_assets/nightly",
        "amethyst_animation/nightly",
        "amethyst_audio/nightly",
        "amethyst_core/nightly",
        "amethyst_rendy/nightly",
]
