[package]
name = "byond"
description = "Some data structures to reproduce the Byond engine. The protocols are faked for now."
version = "0.1.0"
authors = ["Hugo Laloge <hugo.laloge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.15", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
