[package]
name = "dmi-assets"
version = "0.1.0"
authors = ["Hugo Laloge <hugo.laloge@gmail.com>"]
edition = "2018"

[dependencies]
amethyst_assets = { git = "https://github.com/amethyst/amethyst.git", rev = "0829d10bee0bf2b44db6e90645f61772776a9d12", features = ["nightly"] }
amethyst_core = { git = "https://github.com/amethyst/amethyst.git", rev = "0829d10bee0bf2b44db6e90645f61772776a9d12", features = ["nightly"] }
amethyst_error = { git = "https://github.com/amethyst/amethyst.git", rev = "0829d10bee0bf2b44db6e90645f61772776a9d12" }
amethyst_rendy = { git = "https://github.com/amethyst/amethyst.git", rev = "0829d10bee0bf2b44db6e90645f61772776a9d12", features = ["nightly"] }
inflate = "0.4"
png = "0.14"
fnv = "1"
log = "0.4"
rayon = "1"
